--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Habits and motivation in communities.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Where I'll about shit I want to write about.</h1>
+								<p>Probably stuff on habits, motivation, communities.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
