--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Where I write about stuff I want to write about*</h1>
-								<p>*Mostly: community building, motivation, behavior change, psychology. Less: AI, space, bodybuilding.</p>
+								<h1>Things by Omar</h1>
+								<p>*Tagline</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
