--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Things by Omar</h1>
+								<h1>All the things by Omar</h1>
 								<p>*Tagline</p>
 							</header>
 							<section class="tiles">
