fixed broken li

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><img src="images/omar.jpg">
+							<li><img src="images/omar.jpg"></li>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Work</a></li>
 							<li><a href="#two">Words</a></li>
@@ -113,7 +113,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Omar Ganai's personal profile.</li>
+						<li>Omar Ganai lives in Toronto, Canada. </li>
 					</ul>
 				</div>
 			</footer>
