--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><img src="images/omar.jpg"></li>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Work</a></li>
 							<li><a href="#two">Words</a></li>
@@ -37,6 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
+							<img src="images/omar.jpg">
 							<h1>Omar Ganai</h1>
 							<p>I help companies build products and services that motivate people to change their behaviour.</p>
 							<ul class="actions">
