--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Omar Ganai lives in Toronto, Canada. </li>
+						<li>Omar Ganai lives in Toronto, Canada. <img src="images/canada.png" width="22px" height="11px"></li>
 					</ul>
 				</div>
 			</footer>
