--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 							<h1>Omar Ganai</h1>
 							<p>I help companies build products and services that motivate people to change their behaviour.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="https://twitter.com/omarganai" class="icon fa-twitter fa-2x"></a></li>
+								<li><a href="https://github.com/OmarGanai" class="icon fa-github fa-2x"></a></li>
+								<li><a href="https://angel.co/omar-ganai-1" class="icon fa-angellist fa-2x"></a></li>
+								<li><a href="https://linkedin.com/in/omarganai/" class="icon fa-linkedin fa-2x"></a></li>
+								<li><a href="https://medium.com/@omarganai" class="icon fa-medium fa-2x"></a></li>
+
 							</ul>
 						</div>
 					</section>
