--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<section id="one" class="wrapper style3 fade-up">
 							<div class="inner">
 								<h2>Work</h2>
-								<p>Omar Ganai is an expert in the science of human motivation and behavior change. Here are some of the things he's worked on.</p>
+								<p>Omar Ganai is an expert in the science of motivation and behavior change. Here are some of the things he's made.</p>
 								<div class="features">
 									<section>
 										<span class="icon major fa-rocket"></span>
