--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<section>
 										<span class="icon major fa-book"></span>
 										<h3>Motivating Humans: The Science and Lore of Behavior Change</h3>
-										<p>A comprehensive guide to helping people stay motivated in a de-motivating world. Coming 2019.</p>
+										<p>A comprehensive guide to helping people stay motivated in a de-motivating world. Coming in 2019.</p>
 									</section>
 								</div>
 
