--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Work</a></li>
-							<li><a href="#two">Words</a></li>
-							<li><a href="#three">Email</a></li>
+							<li><a href="#work">Work</a></li>
+							<li><a href="#pms">Words</a></li>
+							<li><a href="#email">Email</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -51,7 +51,7 @@
 					</section>
 
 					<!-- One -->
-						<section id="one" class="wrapper style3 fade-up">
+						<section id="work" class="wrapper style3 fade-up">
 							<div class="inner">
 								<h2>Work</h2>
 								<p>Omar Ganai is an expert in the science of motivation and behavior change. Here are some of the things he's made.</p>
@@ -92,7 +92,7 @@
 						</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style2 spotlights">
+					<section id="pms" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
@@ -106,7 +106,7 @@
 						</section>
 
 						<!-- Three -->
-							<section id="three" class="wrapper style1 fade-up">
+							<section id="email" class="wrapper style1 fade-up">
 								<div class="inner">
 									<h2>Email</h2>
 									<p>You can contact me at <code>omar@ganai.com</code>. I read and respond to emails in the mornings and evenings.</p>
