--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#work">Work</a></li>
-							<li><a href="#pms">Words</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#writing">Writing</a></li>
 							<li><a href="#email">Email</a></li>
 						</ul>
 					</nav>
@@ -36,7 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<img src="images/omar.jpg">
+							<img class="image" src="images/omar.jpg">
 							<h1>Omar Ganai</h1>
 							<p>I help companies build products and services that motivate people to change their behaviour.</p>
 								<ul class="icons">
@@ -46,45 +46,54 @@
 												<li><a href="https://linkedin.com/in/omarganai/" class="icon fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://medium.com/@omarganai" class="icon fa-medium fa-2x"><span class="label">Medium</span></a></li>
 											</ul>
+											<a href="bio.html" class="button">Bio</a> <a href="resume.html" class="button">Résumé</a>
+
 
 						</div>
 					</section>
 
 					<!-- One -->
-						<section id="work" class="wrapper style3 fade-up">
+						<section id="projects" class="wrapper style3 fade-up">
 							<div class="inner">
-								<h2>Work</h2>
-								<p>Omar Ganai is an expert in the science of motivation and behavior change. Here are some of the things he's made.</p>
+								<h2>Select Projects</h2>
+								<p>Omar Ganai is an expert in the practical application of Motivation and Behavior Change Science. He's made companies, products, and services that have helped thousands of people change their behavior. Here are some of them.</p>
 								<div class="features">
 									<section>
 										<span class="icon major fa-rocket"></span>
 										<h3>Habitry</h3>
-										<p>A <a href="http://habitry.com">consulting company</a> using Practical Motivation Science to make more effective products.</p>
+										<p>A consulting firm using Practical Motivation Science to make effective products.</p>
+										<a href="https://habitry.com" class="button fit">Visit Company Website</a>
+										</ul>
 									</section>
 									<section>
 										<span class="icon major fa-mobile"></span>
 										<h3>Habitry iOS</h3>
-										<p>A cutting edge behavior change app for health coaches. Sold by Habitry from 2014-2016.</p>
+										<p>A behavior change app for health coaches. Sold by Habitry from 2014-2016.</p>
+										<a href="habitryios.html" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-graduation-cap"></span>
 										<h3>Habitry Professionals</h3>
-										<p>The first evidence-based, behavior change education platform for health coaches. Sold by Habitry in 2016.</p>
+										<p>Habitry's education platform for health coaches. Sold by Habitry in 2016.</p>
+										<a href="habitrypros.html" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-columns"></span>
 										<h3>The Motivator</h3>
-										<p>An annual research review of behavioral psychology. Sold by Habitry in 2017.</p>
+										<p>Habitry's research review of behavioral psychology. Sold by Habitry in 2017.</p>
+										<a href="themotivator.html" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
-										<p>Habitry's flagship six-week learning program for coaches. Sold by Habitry in 2016.</p>
+										<p>Habitry's six-week learning program for coaches. Sold by Habitry in 2016.</p>
+										<a href="essentials.html" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-book"></span>
 										<h3>Motivating Humans: The Science and Lore of Behavior Change</h3>
-										<p>A comprehensive guide to helping people stay motivated in a de-motivating world. Coming in 2019.</p>
+										<p>A guide to helping people stay motivated in a de-motivating world. Coming out in 2019.</p>
+										<a href="motivatinghumans.html" class="button fit">Learn More</a>
 									</section>
 								</div>
 
@@ -92,7 +101,7 @@
 						</section>
 
 				<!-- Two -->
-					<section id="pms" class="wrapper style2 spotlights">
+					<section id="writing" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
