--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="inner">
 							<img class="image" src="images/omar.jpg">
 							<h1>Omar Ganai</h1>
-							<p>I help companies build products and services that motivate people to change their behaviour.</p>
+							<p>I help companies define, design, and develop for behavior change with and within products, projects, policies, and programs.</p>
 								<ul class="icons">
 												<li><a href="https://twitter.com/omarganai" class="icon fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/OmarGanai" class="icon fa-github fa-2x"><span class="label">GitHub</span></a></li>
@@ -46,8 +46,7 @@
 												<li><a href="https://linkedin.com/in/omarganai/" class="icon fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://medium.com/@omarganai" class="icon fa-medium fa-2x"><span class="label">Medium</span></a></li>
 											</ul>
-											<a href="bio.html" class="button">Bio</a> <a href="resume.html" class="button">Résumé</a>
-
+											<a href="bio.html" class="button">Bio</a> <a href="/resume" class="button">Résumé</a>
 
 						</div>
 					</section>
@@ -69,31 +68,31 @@
 										<span class="icon major fa-mobile"></span>
 										<h3>Habitry iOS</h3>
 										<p>A behavior change app for health coaches. Sold by Habitry from 2014-2016.</p>
-										<a href="habitryios.html" class="button fit">Learn More</a>
+										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-graduation-cap"></span>
 										<h3>Habitry Professionals</h3>
 										<p>Habitry's education platform for health coaches. Sold by Habitry in 2016.</p>
-										<a href="habitrypros.html" class="button fit">Learn More</a>
+										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-columns"></span>
 										<h3>The Motivator</h3>
 										<p>Habitry's research review of behavioral psychology. Sold by Habitry in 2017.</p>
-										<a href="themotivator.html" class="button fit">Learn More</a>
+										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
 										<p>Habitry's six-week learning program for coaches. Sold by Habitry in 2016.</p>
-										<a href="essentials.html" class="button fit">Learn More</a>
+										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-book"></span>
 										<h3>Motivating Humans: The Science and Lore of Behavior Change</h3>
 										<p>A guide to helping people stay motivated in a de-motivating world. Coming out in 2019.</p>
-										<a href="motivatinghumans.html" class="button fit">Learn More</a>
+										<a href="#" class="button fit">Learn More</a>
 									</section>
 								</div>
 
