--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
 <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 <!-- print stylesheets
 <link href="assets/css/vendor/gutenberg.min.css" rel="stylesheet" type="text/css" media="print"> -->
-  <link href="assets/css/resume.css" rel="stylesheet" type="text/css">
+  <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
