--- a/resume/index.html
+++ b/resume/index.html
@@ -139,7 +139,7 @@
 
 							<div class="skill_card">
 								<div class="skill_card-inner">
-									<p>Motivational Design & UX</p>
+									<p>UX & Motivation Design</p>
 										<div class="skill_rating">
 										<span class="skill_rating-item"></span>
 										<span class="skill_rating-item"></span>
@@ -246,33 +246,21 @@
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014 &ndash; 2016</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
-
-
 	                        <span class="italic">Product Management, </span>
-
-
-
-	                        <span class="italic">UX, </span>
-
-
-
-	                        <span class="italic">User Testing, </span>
-
-
-
-	                        <span class="italic">Research</span>
-
-
+	                        <span class="italic">UX & Motivation Design,</span>
+	                        <span class="italic">Research Methods & Analytics</span>
 	                    </p>
 	                    <p class="project_card-description">A cutting edge behavior change app for health coaches.</p>
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Recruited and lead a team of 7 across 4 time zones to research, design, ship, and market.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled executive and product team to define the problem space, context, and outcome goals by conducting behavioral diagnosis, stakeholder analysis, and literature review. </li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>1,000+ users in 90 days.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed user stories, user journeys, and detailed behavioral plans for product team to enable users to take action and receive value from the product.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>72% daily adherence and 68% user retention for 365 days.</li>
+												<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Collected customer feedback and translated it into ongoing design requirements.</li>
+
+												<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed communications, onboarding materials, and training documentation to support implementation and adoption of Habitry’s iOS coaching platform.</li>
 
 	                    </ul>
 	                    </div>
@@ -286,28 +274,19 @@
 	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2015.12 &ndash; 2016.12 </h3>
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2015 &ndash; 2016</h3>
 	                </div> <!-- inline-flex -->
-	                    <p class="project_card-roles">
 
-
-	                        <span class="italic">Product Management, </span>
-
-
-
-	                        <span class="italic">UX, </span>
-
-
-
-	                        <span class="italic">Front-End Development</span>
-
-
-	                    </p>
-	                    <p class="project_card-description">The first evidence-based, behavior change education for health coaches.</p>
+												<p class="project_card-roles">
+		                        <span class="italic">Product Management, </span>
+		                        <span class="italic">UX & Motivation Design, </span>
+														<span class="italic">Instructional Design</span>
+		                    </p>
+	                    <p class="project_card-description">The first evidence-based, behavior change education platform for health coaches.</p>
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and created a proprietary LMS to deliver a year-long group education platform in support of Habitry iOS.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built, maintained, and marketed with a team of 3 producing daily content</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built, maintained, and marketed with a team of 3 producing daily content.</li>
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Sold product and co-developed platform into the largest behavior change education in the UK.</li>
 
@@ -315,6 +294,33 @@
 	                    </div>
 	                  <!-- </div> -->
 	            <!--    </div> -->
+
+							<div class="inline-flex justify-between w-full">
+				<!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
+					<!--       <div class="project_card-inner"> -->
+									<h3 class="project_card-name">Essentials of Habit Coaching</h3>
+									<h3 class="hidden sm:block md:block lg:block xl:block print:block">2015.06 &ndash; 2016.05 </h3>
+									<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2015 &ndash; 2016</h3>
+								</div> <!-- inline-flex -->
+
+											<p class="project_card-roles">
+													<span class="italic">Product Management, </span>
+													<span class="italic">UX & Motivation Design, </span>
+													<span class="italic">Coaching & Facilitation</span>
+											</p>
+										<p class="project_card-description">Habitry's flagship online learning program for coaches. A six week introduction to Habitry's methods for producing lasting behavior change.</p>
+										<div class="project_card-highlights">
+										<ul class="fa-ul">
+
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed, tested, and adapted curriculum based on user testing, stakeholder analysis, and literature reviews.</li>
+
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Produced written content to market the product.</li>
+
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Based on practical application of Self-Determination Theory, Dual-Process Model of Habit Formation, and Motivational Interviewing.</li>
+										</ul>
+										</div>
+									<!-- </div> -->
+						<!--    </div> -->
 
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
@@ -327,14 +333,8 @@
 
 
 	                        <span class="italic">Product Management, </span>
-
-
-
-	                        <span class="italic">Marketing, </span>
-
-
-
-	                        <span class="italic">Presenting</span>
+	                        <span class="italic">UX & Motivation Design, </span>
+													<span class="italic">Coaching & Facilitation</span>
 
 
 	                    </p>
@@ -356,34 +356,23 @@
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">Worklete Basics Course</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2018.01 &ndash; Present</h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2018 &ndash; Present</h3>
+	                  <h3 class="project_card-name">Worklete Digital Health Platform</h3>
+	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.06 &ndash; 2017.11</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
-
-
-	                        <span class="italic">UX, </span>
-
-
-
-	                        <span class="italic">Writing, </span>
-
-
-
-	                        <span class="italic">User Testing</span>
-
-
+												<span class="italic">UX & Motivation Design, </span>
+												<span class="italic">User Testing, </span>
+												<span class="italic">Writing</span>
 	                    </p>
-	                    <p class="project_card-description">Behavior change strategy and implementation.</p>
+											<p class="project_card-description">Worklete's Digital Health platform builds movement habits in individuals and simultaneously integrates into the workflows of large corporate clients to end injuries in the workplace. Habitry consulted on behavior change science strategy and implementation.</p>
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Audited the previous version of the product for Motivation Science best-practices.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Delivered feedback as a workshop for the product team.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed a workshop on Motivation Science and Design for the product team.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Coordiated product team on creation of the latest version of LMS.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Created a Behavior Change Style Guide to support chatbot writing team.</li>
 
 	                    </ul>
 	                    </div>
@@ -393,26 +382,16 @@
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">Conversa Chatbot Style Guide</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.09 &ndash; 2018.03 </h3>
+	                  <h3 class="project_card-name">Conversa AI Conversation Platform</h3>
+	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.04 &ndash; 2017.11 </h3>
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2017 &ndash; 2018</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
-
-
-	                        <span class="italic">UX, </span>
-
-
-
+	                        <span class="italic">UX & Motivation Design, </span>
 	                        <span class="italic">User Testing, </span>
-
-
-
 	                        <span class="italic">Writing</span>
-
-
 	                    </p>
-	                    <p class="project_card-description">Behavior change science strategy and style guide.</p>
+	                    <p class="project_card-description">The Conversa AI Conversation Platform improves how patients and care teams communicate around key health experiences medication adherence and lifestyle health coaching. Habitry consulted on behavior change science strategy and implementation.</p>
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
@@ -427,89 +406,6 @@
 	                  <!-- </div> -->
 	            <!--    </div> -->
 
-	              <div class="inline-flex justify-between w-full">
-	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
-	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">The Motivator</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.01 &ndash; Present</h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2017 &ndash; Present</h3>
-	                </div> <!-- inline-flex -->
-	                    <p class="project_card-roles">
-
-
-	                        <span class="italic">Product Management, </span>
-
-
-
-	                        <span class="italic">Graphic Design, </span>
-
-
-
-	                        <span class="italic">Writing, </span>
-
-
-
-	                        <span class="italic">Marketing, </span>
-
-
-
-	                        <span class="italic">Front-End Development</span>
-
-
-	                    </p>
-	                    <p class="project_card-description">A quarterly research review of Motivation Science.</p>
-	                    <div class="project_card-highlights">
-	                    <ul class="fa-ul">
-
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Created and shipped the first 58 page issue in 17 days.</li>
-
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Read by thousands of health coaches every quarter.</li>
-
-	                    </ul>
-	                    </div>
-	                  <!-- </div> -->
-	            <!--    </div> -->
-
-	              <div class="inline-flex justify-between w-full">
-	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
-	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">The Bettercast</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.01 &ndash; Present</h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2017 &ndash; Present</h3>
-	                </div> <!-- inline-flex -->
-	                    <p class="project_card-roles">
-
-
-	                        <span class="italic">Product Management, </span>
-
-
-
-	                        <span class="italic">Audio Production, </span>
-
-
-
-	                        <span class="italic">Writing, </span>
-
-
-
-	                        <span class="italic">Front-End Development</span>
-
-
-	                    </p>
-	                    <p class="project_card-description">A podcast about getting better at things.</p>
-	                    <div class="project_card-highlights">
-	                    <ul class="fa-ul">
-
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Highly produced, hour-long interview show.</li>
-
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>5,000+ downloads of Season 1.</li>
-
-	                    </ul>
-	                    </div>
-	                  <!-- </div> -->
-	            <!--    </div> -->
-
-	            <!-- </div> -->
 	      </section>
 
 				<!-- Publications -->
@@ -519,86 +415,19 @@
 							 <div class="inline-flex justify-between w-full">
 								 <h3 class="italic">Motivating Humans</h3><h3>2019</h3>
 							 </div>
-									 <p class="">A comprehensive, scientific guide to helping people stay motivated in a de-motivating world.</p>
+									 <p class="">The science and lore of helping people stay motivated in a de-motivating world.</p>
 
 							 <div class="inline-flex justify-between w-full">
-								 <h3 class="italic">The Motivator</h3><h3>2017</h3>
-							 </div>
-									 <p class="">An Annual Motivation Science Journal.</p>
-
+										 <h3 class="italic">Practical Motivation Science</h3><h3>2017 &ndash; Present </h3>
+									 </div>
+					 <p class="">1,000-15,000 word articles on the practical applications of Motivation Science for product managers and designers. 6,000+ views of Season 1 so far.</p>
 							 <div class="inline-flex justify-between w-full">
-								 <h3 class="italic">Habitry Starter Kit</h3><h3>2016</h3>
-							 </div>
-									 <p class="">A 50-page guide for health coaches looking to get started in Habit-Based Coaching.</p>
 
-							 <div class="inline-flex justify-between w-full">
-								 <h3 class="italic">We Make Communities</h3><h3>2015</h3>
+								 <h3 class="italic">The Motivator</h3><h3>2017 &ndash; Present</h3>
 							 </div>
-									 <p class="">Practical behavior change strategies for health coaches from Social Psychology.</p>
-
-							 <div class="inline-flex justify-between w-full">
-								 <h3 class="italic">Intervention</h3><h3>2012</h3>
-							 </div>
-									 <p class="">With Dan John. 10 Questions and 5 Principles for finding your path to health and fitness.</p>
-
-							 <div class="inline-flex justify-between w-full">
-								 <h3 class="italic">Hello Healthy</h3><h3>2012</h3>
-							 </div>
-									 <p class="">A 2 year-long series of weekly blog posts for the 160mil users of MyFitnessPal.</p>
-
+						<p class="">A quarterly research review of Motivation Science read by thousands of health coaches each quarter.</p>
 
 					 </section>
-
-					 <!-- Awards -->
-							 <section class="item">
-									 <h5>Awards</h5>
-									 <div class="inner-cols justify-between">
-
-										 <div class="award_card text-center w-1/2 sm:w-1/4 md:w-1/4 lg:w-1/4 xl:w-1/4 print:w-1/4 mt-6;">
-											 <div class="award_card-inner flex-col">
-												 <div class="award_card-title"><h4>Panelist</h4></div>
-												 <p class="award_card-awarder">Health Experience Design Conference</p>
-												 <p class="award_card-date">2017</p>
-											 </div>
-										 </div>
-
-										 <div class="award_card text-center w-1/2 sm:w-1/4 md:w-1/4 lg:w-1/4 xl:w-1/4 print:w-1/4 mt-6;">
-											 <div class="award_card-inner flex-col">
-												 <div class="award_card-title"><h4>Featured Presenter</h4></div>
-												 <p class="award_card-awarder">Equinox High Performance Living</p>
-												 <p class="award_card-date">2016</p>
-											 </div>
-										 </div>
-
-										 <div class="award_card text-center w-1/2 sm:w-1/4 md:w-1/4 lg:w-1/4 xl:w-1/4 print:w-1/4 mt-6;">
-											 <div class="award_card-inner flex-col">
-												 <div class="award_card-title"><h4>Contributing Scholar</h4></div>
-												 <p class="award_card-awarder">National Association of Sport Medicine</p>
-												 <p class="award_card-date">2015</p>
-											 </div>
-										 </div>
-
-										 <div class="award_card text-center w-1/2 sm:w-1/4 md:w-1/4 lg:w-1/4 xl:w-1/4 print:w-1/4 mt-6;">
-											 <div class="award_card-inner flex-col">
-												 <div class="award_card-title"><h4>Featured Presenter</h4></div>
-												 <p class="award_card-awarder">National Association of Sport Psychology</p>
-												 <p class="award_card-date">2013</p>
-											 </div>
-										 </div>
-
-								 </div>
-
-							 </section>
-
-	  </div>
-						</div>
-					</section>
-
-
-
-			</div>
-
-		<!-- Footer -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
