--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
-										<p>Habitry's six-week learning program for coaches. Sold by Habitry in 2016.</p>
+										<p>Habitry's six-week digital learning program for coaches. Sold by Habitry in 2016.</p>
 										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
