--- a/resume/index.html
+++ b/resume/index.html
@@ -44,7 +44,7 @@
 	    <section class="item">
 	        <h5 class="mb-6">Summary</h5>
 	          <div class="inline-flex justify-between w-full">
-	          <p class="text-justify">Omar helps companies define, design, and develop for improved behavior change outcomes with and within products, projects, policies, and programs. Expert in practical application of Motivation & Behavior Change Science, Product/Project Management, and Data Analytics.</div>
+	          <p class="text-justify">I help companies define, design, and develop for improved behavior change outcomes with and within products, projects, policies, and programs. I'm an expert in practical application of Motivation & Behavior Change Science, Product/Project Management, and Data Analytics.</div>
 	    </section>
 	  <!-- Work -->
 	    <section class="item">
@@ -53,7 +53,7 @@
 	          <div class="inline-flex justify-between w-full page-break-before">
 	          <h3 class="self-start">Product Manager & Consultant, Habitry</h3>
 	          <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.12 &ndash; Present</h3>
-	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014 &ndash; Present</h3>
+	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014.12 &ndash; Present</h3>
 	          </div>
 									<p class="companydescription">Habitry helps companies in health-tech, sales, and financial-tech build products and services that motivate people to change their behavior.</p>
 	                  <div class="highlights">
@@ -69,7 +69,7 @@
 	          <div class="inline-flex justify-between w-full page-break-before">
 	          <h3 class="self-start">Business Analyst, Cisco Systems</h3>
 	          <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.07 &ndash; 2015.07 </h3>
-	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2008 &ndash; 2014</h3>
+	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014.07 &ndash; 2015.07</h3>
 	          </div>
 	          <p class="companydescription">Cisco Systems is a Fortune 100 company that develops, manufactures and sells networking hardware, telecommunications equipment and other high-technology services and products.</p>
 	                  <div class="highlights">
