--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,7 @@
 						<div class="inner">
 							<div class="container mx-4 sm:mx-0 md:mx-0 lg:mx-0 xl:mx-0 print:mx-0">
 	  <header class="text-center mb-6 pb-px">
-	    <h1 class="my-0"><a href="https://smledbetter.com/" target=_blank>Omar Ganai</a></h1>
+	    <h1 class="my-0"><a href="https://ganai.com/" target=_blank>Omar Ganai</a></h1>
 	    <div class="inline-block xs:block sm:inline-flex md:inline-flex lg:inline-flex xl:inline-flex print:inline-flex w-full justify-between my-0 my-3 flex-1">
 	      <div class="w-full xs:w-full sm:w-1/3 md:w-1/3 lg:w-1/3 xl:w-1/3 print:w-1/3 flex-no-shrink"><p class="major">(905) 630-0923</p></div>
 	      <div class="w-full xs:w-full sm:w-1/3 md:w-1/3 lg:w-1/3 xl:w-1/3 print:w-1/3 flex-no-shrink"><p class="major"><a href="mailto:omar@ganai.com"><span class="jazzy">omar@ganai.com</span></a></p></div>
