--- a/resume/index.html
+++ b/resume/index.html
@@ -90,9 +90,9 @@
 	    <section class="item">
 	        <h5>Education & Certifications</h5>
 					<div class="inline-flex justify-between w-full">
-	        <div class="self-start"><h3>Project Management Professional</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">Estimated June 2018</span></h3></div>
+	        <div class="self-start"><h3>Project Management Professional</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">&ndash; </span>Estimated June 2018</h3></div>
 	        </div>
-			<p class="italic">Project Management Institute</p>
+			<p class="italic">University of Waterloo</p>
 
 	        <div class="inline-flex justify-between w-full">
 	        <div class="self-start"><h3>Doctor of Philosophy (all but thesis) in I/O Psychology</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">2010 &ndash; </span>2013</h3></div>
@@ -438,6 +438,8 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	</body>
 </html>
