--- a/resume/index.html
+++ b/resume/index.html
@@ -92,7 +92,7 @@
 					<div class="inline-flex justify-between w-full">
 	        <div class="self-start"><h3>Project Management Professional</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">&ndash; </span>Estimated  June 2018</h3></div>
 	        </div>
-			<p class="italic">University of Waterloo</p>
+			<p class="italic">Project Management Institute</p>
 
 	        <div class="inline-flex justify-between w-full">
 	        <div class="self-start"><h3>Doctor of Philosophy (all but thesis) in I/O Psychology</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">2010 &ndash; </span>2013</h3></div>
