--- a/resume/index.html
+++ b/resume/index.html
@@ -426,7 +426,7 @@
 
 								 <h3 class="italic">The Motivator</h3><h3>2017 &ndash; Present</h3>
 							 </div>
-						<p class="">A quarterly research review of Motivation Science read by thousands of health coaches each quarter.</p>
+						<p class="">A research review of Motivation Science read in print by thousands of health coaches each quarter.</p>
 
 					 </section>
 
