--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- stylesheets -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -18,6 +17,7 @@
 <!-- print stylesheets
 <link href="assets/css/vendor/gutenberg.min.css" rel="stylesheet" type="text/css" media="print"> -->
   <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 
 	<body>
@@ -53,8 +53,8 @@
 
 	          <div class="inline-flex justify-between w-full page-break-before">
 	          <h3 class="self-start">Product Manager & Consultant, Habitry</h3>
-	          <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.12 &ndash; Present</h3>
-	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014.12 &ndash; Present</h3>
+	          <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2014 &ndash; Present</h3>
+						<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2014  &ndash; Present</h3>
 	          </div>
 									<p class="companydescription">Habitry helps companies in health-tech, sales, and financial-tech build products and services that motivate people to change their behavior.</p>
 	                  <div class="highlights">
@@ -69,8 +69,8 @@
 
 	          <div class="inline-flex justify-between w-full page-break-before">
 	          <h3 class="self-start">Business Analyst, Cisco Systems</h3>
-	          <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.07 &ndash; 2015.07 </h3>
-	          <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014.07 &ndash; 2015.07</h3>
+						<h3 class="hidden sm:block md:block lg:block xl:block print:block">Jul 2014 &ndash; Jul 2015</h3>
+						<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Jul 2014 &ndash; Jul 2015</h3>
 	          </div>
 	          <p class="companydescription">Cisco Systems is a Fortune 100 company that develops, manufactures and sells networking hardware, telecommunications equipment and other high-technology services and products.</p>
 	                  <div class="highlights">
@@ -90,25 +90,31 @@
 	    <section class="item">
 	        <h5>Education & Certifications</h5>
 					<div class="inline-flex justify-between w-full">
-	        <div class="self-start"><h3>Project Management Professional</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">&ndash; </span>Estimated  June 2018</h3></div>
+
+		      <div class="self-start"><h3>Project Management Professional</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible"></span>Est. Jun 2018</h3></div>
 	        </div>
-			<p class="italic">Project Management Institute</p>
+					<p class="italic">Project Management Institute</p>
 
 	        <div class="inline-flex justify-between w-full">
-	        <div class="self-start"><h3>Doctor of Philosophy (all but thesis) in I/O Psychology</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">2010 &ndash; </span>2013</h3></div>
+	        <div class="self-start"><h3>Ph.D. (all but thesis) in I/O Psychology</h3></div><div class="self-end">
+						<h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible"></span>2010 &ndash; 2013</h3>
+					</div>
 	        </div>
-			<p class="italic">University of Waterloo</p>
+					<p class="italic">University of Waterloo</p>
 
-	        <div class="inline-flex justify-between w-full">
-	        <div class="self-start"><h3>Master of Arts in I-O Psychology</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">2010 &ndash; </span>2012</h3></div>
-	      </div>
-	            <p class="italic">University of Waterloo</p>
+					<div class="inline-flex justify-between w-full">
+	        <div class="self-start"><h3>M.A. in I/O Psychology</h3></div><div class="self-end">
+						<h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible"></span>2010 &ndash; 2012</h3>
+					</div>
+	        </div>
+					<p class="italic">University of Waterloo</p>
 
-	        <div class="inline-flex justify-between w-full">
-	        <div class="self-start"><h3>Bachelor of Arts with Honors, Psychology</h3></div><div class="self-end"><h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible">2007 &ndash; </span>2010</h3></div>
-	      </div>
-	       <p class="italic">San José State University</p>
-
+					<div class="inline-flex justify-between w-full">
+	        <div class="self-start"><h3>B.A. (with honors) in Psychology</h3></div><div class="self-end">
+						<h3><span class="invisible sm:visible md:visible lg:visible xl:visible print:visible"></span>2007 &ndash; 2009</h3>
+					</div>
+	        </div>
+					<p class="italic">University of Waterloo</p>
 
 	    </section>
 	<!-- Skills -->
@@ -243,8 +249,8 @@
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
 	                  <h3 class="project_card-name">Habitry iOS App</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.08 &ndash; 2016.12 </h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014 &ndash; 2016</h3>
+	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2014 &ndash; Dec 2016</h3>
+	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2014 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
 	                        <span class="italic">Product Management, </span>
@@ -272,8 +278,8 @@
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
 	                  <h3 class="project_card-name">Habitry Professionals</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2015.12 &ndash; 2016.12 </h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2015 &ndash; 2016</h3>
+	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2015 &ndash; Dec 2016</h3>
+	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2015 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
 
 												<p class="project_card-roles">
@@ -300,8 +306,8 @@
 				<!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 					<!--       <div class="project_card-inner"> -->
 									<h3 class="project_card-name">Essentials of Habit Coaching</h3>
-									<h3 class="hidden sm:block md:block lg:block xl:block print:block">2015.06 &ndash; 2016.05 </h3>
-									<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2015 &ndash; 2016</h3>
+									<h3 class="hidden sm:block md:block lg:block xl:block print:block">Jun 2016 &ndash; May 2015</h3>
+									<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Jun 2016 &ndash; May 20156</h3>
 								</div> <!-- inline-flex -->
 
 											<p class="project_card-roles">
@@ -327,8 +333,8 @@
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
 	                  <h3 class="project_card-name">The Motivate Summits</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2014.01 &ndash; 2016.12 </h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2014 &ndash; 2016</h3>
+	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2014 &ndash; Dec 2016</h3>
+	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2014 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
 
@@ -358,7 +364,8 @@
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
 	                  <h3 class="project_card-name">Worklete Digital Health Platform</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.06 &ndash; 2017.11</h3>
+										<h3 class="hidden sm:block md:block lg:block xl:block print:block">Jun 2016 &ndash; Nov 2017</h3>
+										<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Jun 2016 &ndash; Nov 2017</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
 												<span class="italic">UX & Motivation Design, </span>
@@ -384,8 +391,8 @@
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
 	                  <h3 class="project_card-name">Conversa AI Conversation Platform</h3>
-	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">2017.04 &ndash; 2017.11 </h3>
-	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">2017 &ndash; 2018</h3>
+										<h3 class="hidden sm:block md:block lg:block xl:block print:block">Apr 2017 &ndash; Nov 2017</h3>
+										<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Apr 2017 &ndash; Nov 2017</h3>
 	                </div> <!-- inline-flex -->
 	                    <p class="project_card-roles">
 	                        <span class="italic">UX & Motivation Design, </span>
