--- a/index.html
+++ b/index.html
@@ -101,15 +101,16 @@
 						</section>
 
 				<!-- Two -->
-					<section id="writing" class="wrapper style2 spotlights">
-						<section>
-							<div class="content">
-								<div class="inner">
+				<section id="writing" class="wrapper style2 spotlights">
+					<section>
+						<div class="content">
+							<div class="inner">
 									<h2>Practical Motivation Science</h2>
-									<p>Articles, tips, research, reports, thought experiments, and wild speculation about applying behavior change science to the practical problems facing product managers, designers, and anyone making stuff for health care, consumer financial products, pharma, insurance, or education.</p>
-									<ul class="actions">
-										<li><a href="https://medium.com/practical-motivation-science" class="button">Medium Publication</a></li>
-									</ul>
+									<p>Articles, thought experiments, and wild speculation about applying behavior change science to the practical problems facing product managers and designers. Season 1 has received 6,000+ views so far.</p>
+									<div class="content">
+										<section>
+												<ul class="actions">
+													<li><a href="https://medium.com/practical-motivation-science" class="button">Medium Publication</a></li>
 								</div>
 							</div>
 						</section>
