--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 									</section>
 									<section>
 										<span class="icon major fa-book"></span>
-										<h3>Motivating Humans: The Science and Lore of Behavior Change</h3>
-										<p>A guide to helping people stay motivated in a de-motivating world. Coming out in 2019.</p>
+										<h3>Motivating Humans</h3>
+										<p>The science and lore of helping people stay motivated in a de-motivating world.</p>
 										<a href="#" class="button fit">Learn More</a>
 									</section>
 								</div>
