--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 									<section>
 										<span class="icon major fa-rocket"></span>
 										<h3>Habitry</h3>
-										<p>A consulting firm using Practical Motivation Science to make effective products.</p>
+										<p>Consulting for Practical Motivation Science to make better products.</p>
 										<a href="https://habitry.com" class="button fit">Visit Company Website</a>
 										</ul>
 									</section>
 									<section>
 										<span class="icon major fa-mobile"></span>
 										<h3>Habitry iOS</h3>
-										<p>A behavior change app for health coaches. Sold by Habitry from 2014-2016.</p>
+										<p>A behavior change app for health coaches. Sold by Habitry  2014-2016.</p>
 										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
@@ -80,7 +80,7 @@
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
-										<p>Habitry's six-week digital learning program for coaches. Sold by Habitry in 2016.</p>
+										<p>A six-week digital learning program for coaches. Sold by Habitry in 2016.</p>
 										<a href="#" class="button fit">Learn More</a>
 									</section>
 									<section>
